[tool.poetry]
name = "qa-guru-5-19-1"
version = "0.1.0"
description = ""
authors = ["Artyom Samoshin <artyomzhoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selene = "2.0.0rc2"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
